--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
     </header>
     <%= render 'layouts/shim' %>
     <div class="container">
-
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div,value,class: "alert alert-#{key}") %>
+      <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
      <%= debug(params) if Rails.env.development? %>
