--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
     </header>
-    <%= render 'layouts/shim' %>
+    <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |key, value| %>
         <%= content_tag(:div,value,class: "alert alert-#{key}") %>
